// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DesktopTopHeader: Component should render correctly 1`] = `
<styled.div>
  <styled.div>
    <Component
      buttonProps={
        Object {
          "id": "desktopTopHeaderOpenMenuButton",
          "onClick": [Function],
        }
      }
      customButtonStyles={
        Object {
          "flex": "0 0 auto",
          "position": null,
        }
      }
      customStyles={
        Object {
          "padding": null,
        }
      }
    >
      <styled.div>
        <Styled(Styled(Link))
          to="/"
        >
          <styled.schemaLogo.svg
            id="desktopTopHeaderSchemaLogo"
          />
        </Styled(Styled(Link))>
        <styled.div>
          <Component
            customStyles={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderRadius": null,
                "display": "flex",
                "height": "calc(100% - 20px)",
                "margin": "6px 0 10px 10px",
                "padding": "0 7px",
              }
            }
            id="desktopTopHeaderLogoutBtn"
            onClick={[Function]}
          >
            <Component />
          </Component>
          <Styled(Styled(Link))
            to="/settings"
          >
            <Component
              id="desktopTopHeaderSettingsBtn"
            />
          </Styled(Styled(Link))>
        </styled.div>
      </styled.div>
    </Component>
    <styled.div
      onClick={[Function]}
    />
    <styled.div
      onClick={[Function]}
    >
      <Component
        closeButtonProps={
          Object {
            "customStyles": Object {
              "backgroundColor": "transparent",
              "right": 44,
              "top": 44,
            },
            "id": "desktopTopHeaderCloseMenuButton",
          }
        }
        customStyles={
          Object {
            "maxWidth": 595,
            "minHeight": null,
            "padding": 50,
            "position": "absolute",
            "transition": "transform 0.4s cubic-bezier(0.86, 0, 0.07, 1), visibility 0s 0.4s",
            "zIndex": 9999,
          }
        }
        id="menuContainer"
        isDesktop={true}
        onClose={[Function]}
      >
        <H2>
          <MemoizedFormattedMessage
            defaultMessage="Schema CMS"
            id="shared.components.desktopHeader.title"
          />
        </H2>
        <H1>
          <MemoizedFormattedMessage
            defaultMessage="Menu"
            id="shared.components.desktopHeader.subtitle"
          />
        </H1>
        <styled.div
          onClick={[Function]}
        >
          <styled.div>
            <Styled(styled.div)
              active={false}
              key="0"
            >
              <Link
                id="projectsNavBtn"
                onClick={[Function]}
                to="/project"
              >
                <MemoizedFormattedMessage
                  defaultMessage="Projects"
                  id="shared.components.desktopHeader.projects"
                />
              </Link>
            </Styled(styled.div)>
          </styled.div>
          <styled.div>
            <Styled(styled.div)
              active={true}
              key="0"
            >
              <a
                href="/"
                id="aboutNavBtn"
                rel="noreferrer"
                target="_blank"
              >
                <MemoizedFormattedMessage
                  defaultMessage="About Schema CMS"
                  id="shared.components.desktopHeader.about"
                />
              </a>
            </Styled(styled.div)>
            <Styled(styled.div)
              active={true}
              key="1"
            >
              <a
                href="https://github.com/schemadesign/schema_cms/blob/master/backend/app/docs/public_api/api_calls.md"
                id="apiNavBtn"
                rel="noreferrer"
                target="_blank"
              >
                <MemoizedFormattedMessage
                  defaultMessage="API Doc"
                  id="shared.components.desktopHeader.api"
                />
              </a>
            </Styled(styled.div)>
            <Styled(styled.div)
              active={true}
              key="2"
            >
              <a
                href="https://github.com/schemadesign/schema_cms"
                id="repositoryNavBtn"
                rel="noreferrer"
                target="_blank"
              >
                <MemoizedFormattedMessage
                  defaultMessage="GitHub Repository"
                  id="shared.components.desktopHeader.repository"
                />
              </a>
            </Styled(styled.div)>
          </styled.div>
        </styled.div>
      </Component>
    </styled.div>
  </styled.div>
  <LogoutModal
    logoutModalOpen={false}
    onAction={[Function]}
    redirectUrl="/logout"
  />
</styled.div>
`;

exports[`DesktopTopHeader: Component should render correctly when no user 1`] = `
<styled.div>
  <styled.div>
    <Styled(Styled(Link))
      to="/"
    >
      <styled.schemaLogo.svg
        id="desktopTopHeaderSchemaLogo"
      />
    </Styled(Styled(Link))>
    <styled.div
      onClick={[Function]}
    />
    <styled.div
      onClick={[Function]}
    >
      <Component
        closeButtonProps={
          Object {
            "customStyles": Object {
              "backgroundColor": "transparent",
              "right": 44,
              "top": 44,
            },
            "id": "desktopTopHeaderCloseMenuButton",
          }
        }
        customStyles={
          Object {
            "maxWidth": 595,
            "minHeight": null,
            "padding": 50,
            "position": "absolute",
            "transition": "transform 0.4s cubic-bezier(0.86, 0, 0.07, 1), visibility 0s 0.4s",
            "zIndex": 9999,
          }
        }
        id="menuContainer"
        isDesktop={true}
        onClose={[Function]}
      >
        <H2>
          <MemoizedFormattedMessage
            defaultMessage="Schema CMS"
            id="shared.components.desktopHeader.title"
          />
        </H2>
        <H1>
          <MemoizedFormattedMessage
            defaultMessage="Menu"
            id="shared.components.desktopHeader.subtitle"
          />
        </H1>
        <styled.div
          onClick={[Function]}
        >
          <styled.div>
            <Styled(styled.div)
              active={false}
              key="0"
            >
              <Link
                id="projectsNavBtn"
                onClick={[Function]}
                to="/project"
              >
                <MemoizedFormattedMessage
                  defaultMessage="Projects"
                  id="shared.components.desktopHeader.projects"
                />
              </Link>
            </Styled(styled.div)>
          </styled.div>
          <styled.div>
            <Styled(styled.div)
              active={true}
              key="0"
            >
              <a
                href="/"
                id="aboutNavBtn"
                rel="noreferrer"
                target="_blank"
              >
                <MemoizedFormattedMessage
                  defaultMessage="About Schema CMS"
                  id="shared.components.desktopHeader.about"
                />
              </a>
            </Styled(styled.div)>
            <Styled(styled.div)
              active={true}
              key="1"
            >
              <a
                href="https://github.com/schemadesign/schema_cms/blob/master/backend/app/docs/public_api/api_calls.md"
                id="apiNavBtn"
                rel="noreferrer"
                target="_blank"
              >
                <MemoizedFormattedMessage
                  defaultMessage="API Doc"
                  id="shared.components.desktopHeader.api"
                />
              </a>
            </Styled(styled.div)>
            <Styled(styled.div)
              active={true}
              key="2"
            >
              <a
                href="https://github.com/schemadesign/schema_cms"
                id="repositoryNavBtn"
                rel="noreferrer"
                target="_blank"
              >
                <MemoizedFormattedMessage
                  defaultMessage="GitHub Repository"
                  id="shared.components.desktopHeader.repository"
                />
              </a>
            </Styled(styled.div)>
          </styled.div>
        </styled.div>
      </Component>
    </styled.div>
  </styled.div>
  <LogoutModal
    logoutModalOpen={false}
    onAction={[Function]}
    redirectUrl="/logout"
  />
</styled.div>
`;
